moved global libs to project

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = m5stack-grey
 framework = arduino
-
 monitor_port = COM3
 upload_port = COM3
 monitor_speed = 921600
+lib_deps = 
+	m5stack/M5Stack@^0.3.1
+	tobozo/M5Stack-SD-Updater@^1.0.4
