--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:m5stack-core-esp32]
 platform = espressif32
-board = m5stack-grey
+board = m5stack-core-esp32
 framework = arduino
-monitor_port = COM3
-upload_port = COM3
 monitor_speed = 921600
 lib_deps = 
-	m5stack/M5Stack@^0.3.1
-	tobozo/M5Stack-SD-Updater@^1.0.4
+	m5stack/M5Stack@^0.4.3
+	tobozo/M5Stack-SD-Updater@^1.2.1
